syntax = "proto2";

package flare.pb;

message FlareMessage {
  enum Type {
    AUTHEN = 1;
    CHALLENGE = 2;
    RESPONSE = 3;
    ANNOUNCE = 4;
    GETPEERS = 5;
    PEERLIST = 6;
  }

  required Type type = 1;

  optional Authen authen       = 2;
  optional Challenge challenge = 3;
  optional Response response   = 4;

  optional Announce announce = 5;
  optional GetPeers getPeers = 6;
  optional PeerList peerList = 7;
}

message Authen {
  required bytes nonce = 1;
}

message Challenge {
  required bytes proof = 1;
  required bytes salt  = 2;
  required bytes nonce = 3;

}

message Response {
  required bytes proof = 1;
  required bytes salt  = 2;
}

message Announce {
  required string domain     = 1;
  required PeerInfo peerInfo = 2;
}

message PeerInfo {
  optional string nick   = 1;
  required bytes peerID  = 2;
  repeated bytes addrs   = 3;
}

message GetPeers {
  required string domain = 1;
}

message PeerList {
  repeated PeerInfo peers = 1;
}
